[project]
name = "mushroll_auth"
version = "0.1.0"
description = "Authentication service for MushRoll casino platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "faststream[rabbitmq]>=0.4.6",
    "mushroll_shared @ file../mushroll_shared"
]

[tool.ruff]
select = ["E", "F", "I", "N", "UP"]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true
